@@ -1,5 +1,13 @@
 1.9.6 - 2018-XX-XX
 
+  1. Change default values for GCS batch/directory operations properties to
+     improve performance:
+
+       fs.gs.copy.max.requests.per.batch (default: 1 -> 15)
+       fs.gs.copy.batch.threads (default: 50 -> 30)
+       fs.gs.max.requests.per.batch (default: 25 -> 15)
+       fs.gs.batch.threads (default: 25 -> 30)
+
 
 1.9.5 - 2018-08-09
 
